# consul-rust

./: Cargo.toml
src/: agent.rs  catalog.rs  connect_ca.rs  kv.rs  request.rs  session.rs
tests/: health.rs  kv.rs  session.rs
