[package]

name = "consul"
version = "0.4.2"
edition = "2018"
authors = ["Andrew Useckas <andrew.useckas@threat-x.com>", "Stu Small <stuart.small@threat-x.com>", "YoungKing <yanckin@gmail.com>", "Pierre Souchay <https://github.com/pierresouchay>", "Tomer Shalev <https://github.com/tomers>"]
description = "Rust client libray for Consul HTTP API"
documentation = "https://docs.rs/consul/"
repository = "https://github.com/pierresouchay/consul-rust"
license = "MIT/Apache-2.0"

readme = "README.md"
keywords = ["consul", "discovery"]

[dependencies]
error-chain = "0.12"
serde = "1"
serde_derive = "1"
serde_json = "1.0"
serde_bytes = "0.11.5"
reqwest = { version = "0.11", features = ["blocking", "json"] }
url = "2.1"
futures = "0.3.0"
async-trait = "0.1"
tokio = { version = "1.8.1", features = ["full"] }
bytes = "1.1.0"

[dev-dependencies]
base64 = "0.13"
hostname = "0.3"
rand = "0.8.3"
async-std = { version = "1.5", features = ["attributes"] }
rstest = "0.8.0"
